@@ -1,3 +1,7 @@
+2014-03-05  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Protect LHAGlue initialisation from unset Lambda values.
+
 2014-02-12  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Adding mkindex script, to generate pdfsets.index automatically
